UI: Offset editor tooltips so they don't overlap and flicker - fixes #1477
rn=

(integrated from master branch change 9.2.1-1687-g91683f3 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -110,3 +110,10 @@
     color: @foreground-special;
     background: @secondary-special;
 }
+
+/* Tooltips */
+
+#editorTooltip
+{
+    margin-left: 10px;
+}
